// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions list renders correctly 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "isLeftAligned": true,
        "key": "created",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "key": "fee",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer",
        "label": "Customer",
      },
      Object {
        "key": "email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "riskLevel",
        "label": "Risk Level",
        "visible": false,
      },
      Object {
        "cellClassName": "deposit",
        "key": "deposit",
        "label": "Deposit",
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          />,
          "value": "txn_j23jda9JJa",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            Jan 2, 2020 / 12:46PM
          </ClickableCell>,
          "value": "2020-01-02 17:46:02",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            Refund
          </ClickableCell>,
          "value": "refund",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            $10.00
          </ClickableCell>,
          "value": 10,
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            $9.50
          </ClickableCell>,
          "value": 9.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 123,
                "url": "https://example.com/order/123",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            <span
              className="payment-method__brand payment-method__brand--visa"
            />
          </ClickableCell>,
          "value": "visa",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            Another customer
          </ClickableCell>,
          "value": "Another customer",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            another@customer.com
          </ClickableCell>,
          "value": "another@customer.com",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            <RiskLevel
              risk={0}
            />
          </ClickableCell>,
          "value": 0,
        },
        Object {
          "display": <ClickableCell
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          >
            <Deposit
              depositId={null}
            />
          </ClickableCell>,
          "value": null,
        },
      ],
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            Jan 4, 2020 / 11:22PM
          </ClickableCell>,
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            Charge
          </ClickableCell>,
          "value": "charge",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $15.00
          </ClickableCell>,
          "value": 15,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $14.50
          </ClickableCell>,
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            <span
              className="payment-method__brand payment-method__brand--mastercard"
            />
          </ClickableCell>,
          "value": "mastercard",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            My name
          </ClickableCell>,
          "value": "My name",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            a@b.com
          </ClickableCell>,
          "value": "a@b.com",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            <RiskLevel
              risk={2}
            />
          </ClickableCell>,
          "value": 2,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            <Deposit
              dateAvailable="2020-01-07 00:00:00"
              depositId="po_mock"
            />
          </ClickableCell>,
          "value": "po_mock",
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "10",
      },
      Object {
        "label": "total",
        "value": "$10.00",
      },
      Object {
        "label": "fees",
        "value": "$1.00",
      },
      Object {
        "label": "net",
        "value": "$9.00",
      },
    ]
  }
  title="Transactions"
  totalRows={10}
/>
`;

exports[`Transactions list renders correctly when filtered to deposit 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "isLeftAligned": true,
        "key": "created",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "key": "fee",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer",
        "label": "Customer",
      },
      Object {
        "key": "email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "riskLevel",
        "label": "Risk Level",
        "visible": false,
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            Jan 4, 2020 / 11:22PM
          </ClickableCell>,
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            Charge
          </ClickableCell>,
          "value": "charge",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $15.00
          </ClickableCell>,
          "value": 15,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            $14.50
          </ClickableCell>,
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            <span
              className="payment-method__brand payment-method__brand--mastercard"
            />
          </ClickableCell>,
          "value": "mastercard",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            My name
          </ClickableCell>,
          "value": "My name",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            a@b.com
          </ClickableCell>,
          "value": "a@b.com",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            id="ch_j239jda"
            parentSegment="transactions"
          >
            <RiskLevel
              risk={2}
            />
          </ClickableCell>,
          "value": 2,
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "3",
      },
      Object {
        "label": "total",
        "value": "$3.00",
      },
      Object {
        "label": "fees",
        "value": "$0.30",
      },
      Object {
        "label": "net",
        "value": "$2.70",
      },
    ]
  }
  title="Deposit Transactions"
  totalRows={3}
/>
`;
